--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </li>
                         <!-- Pages menu -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="../pages/cart/cart-maker.html">Создать задание</a>
+                            <a class="nav-link" href="./pages/cart/cart-maker.html">Создать задание</a>
                         </li>
                         <!-- Sections menu -->
                         <li class="nav-item active">
@@ -96,7 +96,7 @@
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="../pages/support/faq.html">Помощь</a>
+                            <a class="nav-link" href="./pages/support/faq.html">Помощь</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
