--- a/pages/cart/cart-maker.html
+++ b/pages/cart/cart-maker.html
@@ -69,7 +69,7 @@
         <nav class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-dark bg-dark" id="navbar-main">
             <div class="container px-lg-0">
                 <!-- Logo -->
-                <a class="navbar-brand mr-lg-5" href="index.html">
+                <a class="navbar-brand mr-lg-5" href="../../index.html">
                     <img alt="Image placeholder" src="../../assets/img/brand/favicon.png" id="navbar-logo" style="height: 50px;">
                 </a>
                 <!-- Navbar collapse trigger -->
@@ -100,7 +100,7 @@
                             <a class="nav-link" href="/pages/support/faq.html">Помощь</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
+                            <a class="nav-link" href="../authentication/basic-login.html">Войти</a>
                         </li>
 
                     </ul>
