--- a/pages/support/error-404.html
+++ b/pages/support/error-404.html
@@ -43,19 +43,19 @@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
                                     <h6 class="dropdown-header">Меню пользователя</h6>
-                                    <a class="dropdown-item" href="pages/account/account-profile-public.html">
+                                    <a class="dropdown-item" href="/pages/account/account-profile-public.html">
                                         <i class="far fa-user"></i>Аккаунт
                                     </a>
                                     <a class="dropdown-item" href="#">
                                         <span class="float-right badge badge-primary">4</span>
                                         <i class="far fa-envelope"></i>Почта
                                     </a>
-                                    <a class="dropdown-item" href="#">
-                                        <i class="far fa-cog"></i>Настройки
+                                    <a class="dropdown-item" href="/pages/account/account-settings.html" ">
+                                        <i class="far fa-cog "></i>Настройки
                                     </a>
-                                    <div class="dropdown-divider" role="presentation"></div>
-                                    <a class="dropdown-item" href="#">
-                                        <i class="far fa-sign-out-alt"></i>Выход
+                                    <div class="dropdown-divider " role="presentation "></div>
+                                    <a class="dropdown-item " href="# ">
+                                        <i class="far fa-sign-out-alt "></i>Выход
                                     </a>
                                 </div>
                             </li>
@@ -65,41 +65,41 @@
             </div>
         </div>
         <!-- Main navbar -->
-        <nav class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-dark bg-dark" id="navbar-main">
-            <div class="container px-lg-0">
+        <nav class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-dark bg-dark " id="navbar-main ">
+            <div class="container px-lg-0 ">
                 <!-- Logo -->
-                <a class="navbar-brand mr-lg-5" href="index.html">
-                    <img alt="Image placeholder" src="../../assets/img/brand/favicon.png" id="navbar-logo" style="height: 50px;">
+                <a class="navbar-brand mr-lg-5 " href="../../index.html ">
+                    <img alt="Image placeholder " src="../../assets/img/brand/favicon.png " id="navbar-logo " style="height: 50px; ">
                 </a>
                 <!-- Navbar collapse trigger -->
-                <button class="navbar-toggler pr-0" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler pr-0 " type="button " data-toggle="collapse " data-target="#navbar-main-collapse " aria-controls="navbar-main-collapse " aria-expanded="false " aria-label="Toggle navigation ">
+           <span class="navbar-toggler-icon "></span>
          </button>
                 <!-- Navbar nav -->
-                <div class="collapse navbar-collapse" id="navbar-main-collapse">
-                    <ul class="navbar-nav align-items-lg-center">
+                <div class="collapse navbar-collapse " id="navbar-main-collapse ">
+                    <ul class="navbar-nav align-items-lg-center ">
                         <!-- Home - Overview  -->
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../../index.html">Главная</a>
+                        <li class="nav-item active ">
+                            <a class="nav-link " href="../../index.html ">Главная</a>
                         </li>
                         <!-- Pages menu -->
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../cart/cart-maker.html">Создать задание</a>
+                        <li class="nav-item active ">
+                            <a class="nav-link " href="../cart/cart-maker.html ">Создать задание</a>
                         </li>
                         <!-- Sections menu -->
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Все задания</a>
+                        <li class="nav-item active ">
+                            <a class="nav-link " href="index.html ">Все задания</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="pages/account/worker.html">Исполнители</a>
+                        <li class="nav-item active ">
+                            <a class="nav-link " href="../account/worker.html ">Исполнители</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav align-items-lg-center ml-lg-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="faq.html">Помощь</a>
+                    <ul class="navbar-nav align-items-lg-center ml-lg-auto ">
+                        <li class="nav-item active ">
+                            <a class="nav-link " href="faq.html ">Помощь</a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
+                        <li class="nav-item active ">
+                            <a class="nav-link " href="../authentication/basic-login.html ">Войти</a>
                         </li>
 
                     </ul>
@@ -108,39 +108,39 @@
         </nav>
     </header>
     <!-- Omnisearch -->
-    <div id="omnisearch" class="omnisearch">
-        <div class="container">
+    <div id="omnisearch " class="omnisearch ">
+        <div class="container ">
             <!-- Search form -->
-            <form class="omnisearch-form">
-                <div class="form-group">
-                    <div class="input-group input-group-merge input-group-flush">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="far fa-search"></i></span>
+            <form class="omnisearch-form ">
+                <div class="form-group ">
+                    <div class="input-group input-group-merge input-group-flush ">
+                        <div class="input-group-prepend ">
+                            <span class="input-group-text "><i class="far fa-search "></i></span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Напиши слово и нажми enter ...">
+                        <input type="text " class="form-control " placeholder="Напиши слово и нажми enter ... ">
                     </div>
                 </div>
             </form>
-            <div class="omnisearch-suggestions">
-                <h6 class="heading">Поиск исполнителя</h6>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <ul class="list-unstyled mb-0">
+            <div class="omnisearch-suggestions ">
+                <h6 class="heading ">Поиск исполнителя</h6>
+                <div class="row ">
+                    <div class="col-sm-6 ">
+                        <ul class="list-unstyled mb-0 ">
                             <li>
-                                <a class="list-link" href="#">
-                                    <i class="far fa-search"></i>
+                                <a class="list-link " href="# ">
+                                    <i class="far fa-search "></i>
                                     <span>Фотограф</span> в фото услугах
                                 </a>
                             </li>
                             <li>
-                                <a class="list-link" href="#">
-                                    <i class="far fa-search"></i>
+                                <a class="list-link " href="# ">
+                                    <i class="far fa-search "></i>
                                     <span>Авто слесарь</span> в ремонте транспорта
                                 </a>
                             </li>
                             <li>
-                                <a class="list-link" href="#">
-                                    <i class="far fa-search"></i>
+                                <a class="list-link " href="# ">
+                                    <i class="far fa-search "></i>
                                     <span>Электрик</span> в бытовом ремонте
                                 </a>
                             </li>
@@ -159,39 +159,39 @@
 
 
 
-    <section class="slice slice-lg vh-100 bg-gradient-primary overflow-hidden" data-offset-top="#header-main">
-        <div class="bg-absolute-cover vh-100 overflow-hidden">
-            <!-- <figure class="w-100">
-                <img alt="Image placeholder" src="../../assets/img/svg/backgrounds/bg-4.svg" class="svg-inject">
+    <section class="slice slice-lg vh-100 bg-gradient-primary overflow-hidden " data-offset-top="#header-main ">
+        <div class="bg-absolute-cover vh-100 overflow-hidden ">
+            <!-- <figure class="w-100 ">
+                <img alt="Image placeholder " src="../../assets/img/svg/backgrounds/bg-4.svg " class="svg-inject ">
             </figure> -->
         </div>
-        <div class="container h-100 d-flex align-items-center position-relative zindex-100">
-            <div class="col">
-                <div class="row justify-content-center">
-                    <div class="col-lg-7 text-center">
-                        <h6 class="h1 mb-5 font-weight-400 text-white">Страница не найдена</h6>
-                        <a href="../../index.html" class="btn btn-white btn-icon rounded-pill hover-translate-y-n3">
-                            <span class="btn-inner--icon"><i class="far fa-home"></i></span>
-                            <span class="btn-inner--text">Вернуться на главную?</span>
+        <div class="container h-100 d-flex align-items-center position-relative zindex-100 ">
+            <div class="col ">
+                <div class="row justify-content-center ">
+                    <div class="col-lg-7 text-center ">
+                        <h6 class="h1 mb-5 font-weight-400 text-white ">Страница не найдена</h6>
+                        <a href="../../index.html " class="btn btn-white btn-icon rounded-pill hover-translate-y-n3 ">
+                            <span class="btn-inner--icon "><i class="far fa-home "></i></span>
+                            <span class="btn-inner--text ">Вернуться на главную?</span>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="position-absolute bottom-0 right-4 overflow-hidden">
-            <!-- <figure class="w-50">
-                <img alt="Image placeholder" src="../../assets/img/svg/illustrations/undraw_page_not_found_su7k.svg" class="svg-inject opacity-2">
+        <div class="position-absolute bottom-0 right-4 overflow-hidden ">
+            <!-- <figure class="w-50 ">
+                <img alt="Image placeholder " src="../../assets/img/svg/illustrations/undraw_page_not_found_su7k.svg " class="svg-inject opacity-2 ">
             </figure> -->
         </div>
     </section>
     <!-- Core JS - includes jquery, bootstrap, popper, in-view and sticky-kit -->
-    <script src="../../assets/js/purpose.core.js"></script>
+    <script src="../../assets/js/purpose.core.js "></script>
     <!-- Purpose JS -->
-    <script src="../../assets/js/purpose.js"></script>
+    <script src="../../assets/js/purpose.js "></script>
     <!-- Demo JS - remove it when starting your project -->
-    <script src="../../assets/js/demo.js"></script>
+    <script src="../../assets/js/demo.js "></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104437451-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104437451-1 "></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
