--- a/pages/support/faq.html
+++ b/pages/support/faq.html
@@ -41,14 +41,14 @@
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
                                     <h6 class="dropdown-header">Меню пользователя</h6>
-                                    <a class="dropdown-item" href="pages/account/account-profile-public.html">
+                                    <a class="dropdown-item" href="../account/account-profile-public.html">
                                         <i class="far fa-user"></i>Аккаунт
                                     </a>
                                     <a class="dropdown-item" href="#">
                                         <span class="float-right badge badge-primary">4</span>
                                         <i class="far fa-envelope"></i>Почта
                                     </a>
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" href="../account/account-settings.html">
                                         <i class="far fa-cog"></i>Настройки
                                     </a>
                                     <div class="dropdown-divider" role="presentation"></div>
@@ -89,7 +89,7 @@
                             <a class="nav-link" href="index.html">Все задания</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="pages/account/worker.html">Исполнители</a>
+                            <a class="nav-link" href="../account/worker.html">Исполнители</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav align-items-lg-center ml-lg-auto">
@@ -97,7 +97,7 @@
                             <a class="nav-link" href="faq.html">Помощь</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="pages/authentication/basic-login.html">Войти</a>
+                            <a class="nav-link" href="../authentication/basic-login.html">Войти</a>
                         </li>
 
                     </ul>
