--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </li>
                         <!-- Sections menu -->
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Все задания</a>
+                            <a class="nav-link" href="pages/tasks/tasks.html">Все задания</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="./pages/account/worker.html">Исполнители</a>
